    - Default: 50
    - The percentage that a town has to pay per plot to merge with another town. The town that initiates the merge pays the cost.
    - This is based on the price_claim_townblock.
  - Bump language files to 0.100.
  - Fix TownPreMergeEvent being set improperly.
  - Fix NPE when deleting a Town.
0.96.7.7:
  - Fix "Error Updating item_use/build/destroy permission" messages seen in EventWar.
    - Closes #4802.
  - Do a tidy of the PlayerCacheUtil so we aren't throwing and catching NREs.
  - Regression: Remove "spawn" from the list of black-listed Town/Nation names, added to the list recently in error.
  - Fix unbankrupting a town resetting a town's bank account, vanishing any money that might have been added to the town bank manually during bankruptcy.
0.96.7.8:
  - /ta nation NATIONNAME add TOWNNAME now bypasses the invite and other rules allowing an admin to force-add a town to a nation. 
  - Change it so that admins with the bypass node will not warn towns that an outlawed admin is spying on them.
    - Previously only full admins were preventing warns.
  - Add 3 new events around the displayed nation list, courtesy of Goosius with PR #4810.
    - NationListDisplayedNumOnlinePlayersCalculationEvent
    - NationListDisplayedNumResidentsCalculationEvent
    - NationListDisplayedNumTownsCalculationEvent
  - Add event for the calculation of town map color. courtesy of Goosius with PR #4809.
    - TownMapColourCalculationEvent
  - Update korean.yml, courtesy of yumjunstar with PR #4811.
  - Fix ConcurrentModificationException in Town.
0.96.7.9:
  - Fix for displayed-nation-list events, courtesy of Goosius with PR #4814.
  - Potential fix for being show "Not registered." when attempting to rename a town.
0.96.7.10:
  - Fix TownyWorld setting a town's world when a town is added to a townyworld.
  - Inn Plots no longer turn switch perms on for all groups, instead it uses the TownBlockOwner's perm line like most plot types.