@@ -5920,3 +5920,4 @@ v0.92.0.11:
 0.96.7.10:
   - Fix TownyWorld setting a town's world when a town is added to a townyworld.
   - Inn Plots no longer turn switch perms on for all groups, instead it uses the TownBlockOwner's perm line like most plot types.
+  - Fix reclamation cost confirmation not being sent to the player using the /t reclaim command.
